--- a/404.html
+++ b/404.html
@@ -73,6 +73,12 @@
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white-90" href="https://diwakarsharma238.github.io/diwakar_portfolio/education/" title="Education page">
+              Education
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="https://diwakarsharma238.github.io/diwakar_portfolio/post/" title="Projects page">
               Projects
             </a>
@@ -136,7 +142,7 @@
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
   <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="https://diwakarsharma238.github.io/diwakar_portfolio/" >
-    &copy;  Diwakar Sharma 2020 
+    &copy;  Diwakar Sharma 2021 
   </a>
     <div>
 
